<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
    http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.dockfx</groupId>
    <artifactId>dockfx</artifactId>
    <packaging>jar</packaging>
    <version>1.0.0-SNAPSHOT</version>
    <name>DockFX</name>
    <url>https://github.com/RobertBColton/DockFX.git</url>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <netbeans.checkstyle.format>true</netbeans.checkstyle.format>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <fileExtensions>java, properties, xml</fileExtensions>
        <module.name>dockfx</module.name>
    </properties>

    <build>
        <plugins>
            <!--<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>install</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <archive>
                        <manifestFile>target/classes/META-INF/MANIFEST.MF</manifestFile>
                        <manifest>
                            <mainClass>org.dockfx.demo.DockFX</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>bundle-manifest</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>manifest</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <instructions>
                        <Bundle-SymbolicName>${project.groupId}</Bundle-SymbolicName>
                        <Bundle-Version>${project.version}</Bundle-Version>
                        <Export-Package>org.dockfx</Export-Package>
                        <Private-Package>org.dockfx.demo</Private-Package>
                    </instructions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                    <release>11</release>
                    <verbose>true</verbose>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.css=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.util=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.base/com.sun.javafx.reflect=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.base/com.sun.javafx.beans=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.scene=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.sg.prism=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.base/com.sun.javafx.logging=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.prism=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.glass.ui=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.geom.transform=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.tk=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.glass.utils=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.font=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.controls/com.sun.javafx.scene.control=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.scene.input=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.application=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.geom=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.iio=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.prism.paint=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.scenario.effect=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.scenario.effect.impl=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.scenario.effect.impl.prism=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.text=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.scene=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.scene.text=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/javafx.scene.paint=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.controls/com.sun.javafx.scene.control.behavior=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.controls/com.sun.javafx.scene.control.inputmap=${module.name}</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.scene.traversal=${module.name}</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <mainClass>org.dockfx.demo.DockFX</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.8</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.0.0</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>checkstyle</report>
                        </reports>
                    </reportSet>
                </reportSets>
                <configuration>
                    <configLocation>google_checks.xml</configLocation>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>11.0.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-graphics -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>11.0.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>11.0.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-media -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>11.0.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-swing -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>11.0.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-web -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>11.0.2</version>
        </dependency>
    </dependencies>
</project>
